fix: adjust spacing 💅

--- a/layout.css
+++ b/layout.css
@@ -103,9 +103,9 @@ h1 {
 }
 .hero > span {
   display: inline-flex;
-  align-items: start;
+  align-items: center;
   flex-wrap: wrap;
-  gap: 1.6rem;
+  gap: 1rem;
 }
 h2 {
   font-size: 1.5rem;
